# meeting-notes

./: .gitignore  Cargo.toml  README.md  build.rs
apps/audio-extraction/: .gitignore  Dockerfile.runpod  README.md  pyproject.toml
apps/audio-extraction/src/audio_extraction/: __main__.py  embeddings.py  handler.py  pipeline.py
apps/desktop/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: main.rs
apps/desktop/src/commands/: chat.rs  claude.rs  config.rs  diagnostics.rs  files.rs  mod.rs  people.rs  sessions.rs  settings.rs  summary.rs  tags.rs  transcripts.rs
apps/file-drop/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
apps/file-drop/src/: main.rs
apps/meeting-understanding/: README.md
apps/webui/: api-router.mjs  app.mjs  chat.mjs  github-markdown.css  i18n.mjs  icons.mjs  index.html  people.mjs  player.mjs  router.mjs  searchable-list.mjs  session.mjs  settings.mjs  sidebar.mjs  tauri-bridge.mjs  tokens.css  transcript.mjs  utils.mjs
apps/webui/chat/: bubble.mjs  composer.mjs  constants.mjs  conversations.mjs  mentions.mjs  panel.mjs  settings.mjs  thread.mjs
apps/webui/i18n/: en.json
docs/: audio-search.md  chat-e2e-testing.md  files-db-cache.md  mic-reconnect-teams.md  right-trim-trailing-silence.md  waveform-generation.md
src/: filesdb.rs  lib.rs  main.rs  markdown.rs  settings.rs  tags.rs  tracing_setup.rs  waveform.rs
src/audio/: mic.rs  mod.rs  recorder.rs  source.rs  writer.rs
src/audio/system_audio/: linux.rs  macos.rs  macos_bindings.rs  mod.rs  windows.rs
src/chat/: manager.rs  mod.rs  summarize.rs  types.rs
src/llm/: claude_code.rs  client.rs  context.rs  mod.rs  prompt.rs  secrets.rs
src/people/: mod.rs
src/server/: mod.rs  routes.rs  web_ui.rs  ws.rs
src/services/: chat.rs  claude.rs  config.rs  diagnostics.rs  error.rs  files.rs  mod.rs  people.rs  serde_helpers.rs  sessions.rs  settings.rs  state.rs  summary.rs  tags.rs  transcripts.rs
src/session/: config.rs  mod.rs  session.rs
src/tunnel/: cloudflared.rs  mod.rs
src/understanding/: mod.rs
src/utils/: log_file.rs
web/: app.mjs  icons.mjs  index.html  people.mjs  player.mjs  session.mjs  settings.mjs  sidebar.mjs  transcript.mjs  utils.mjs
