[package]
name = "meeting-notes-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
mp3lame-encoder = "0.2"
opus = "0.3"
ogg = "0.9"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
symphonia = { version = "0.5", features = ["mp3", "pcm"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSNotification"] }
block2 = "0.5"
core-foundation = "0.10"
core-foundation-sys = "0.8"
