[project]
name = "audio-extraction"
version = "0.1.0"
description = "Stateless audio transcription + diarization service for RunPod serverless"
requires-python = ">=3.10,<3.13"
dependencies = [
    "whisperx>=3.8.0",
    "runpod>=1.7.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_extraction"]
