[project]
name = "audio-extraction"
version = "0.1.0"
description = "Stateless audio transcription + diarization service for RunPod serverless"
requires-python = ">=3.10"
dependencies = [
    "whisperx>=3.8.4",
    "opencc>=1.2.0",
    "runpod>=1.7.0",
    "requests>=2.31.0",
]

# torch and torchaudio are provided by the RunPod base image.
# Do NOT add them here — version mismatches break torchvision C++ extensions.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_extraction"]
