[package]
name = "voicerecords-desktop"
version = "0.1.0"
edition = "2021"
description = "VoiceRecords (主簿) — a voice meeting notes app"
publish = false

[[bin]]
name = "voicerecords"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
futures = "0.3"
meeting-notes-daemon = { path = "../.." }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
