[package]
name = "file-drop"
version = "0.1.0"
edition = "2021"
description = "Temporary file parking server — upload once, download once, auto-expire"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
libc = "0.2"
